Underline links on hover, prevent the link anchors from being hidden by the epic header

--- a/htmlifier/main.css
+++ b/htmlifier/main.css
@@ -16,6 +16,9 @@ a {
   text-decoration: none;
   color: #00d755;
 }
+a:hover {
+  text-decoration: underline;
+}
 
 textarea {
   color: #b93700;
